; ModuleID = '/home/carl/AnghaBench/php-src/ext/phar/extr_util.c_phar_compress_filter.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/phar/extr_util.c_phar_compress_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@PHAR_ENT_COMPRESSION_MASK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"zlib.deflate\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"bzip2.compress\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"unknown\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @phar_compress_filter(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @PHAR_ENT_COMPRESSION_MASK, align 4
  %10 = and i32 %8, %9
  switch i32 %10, label %13 [
    i32 128, label %11
    i32 129, label %12
  ]

11:                                               ; preds = %2
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  br label %18

12:                                               ; preds = %2
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8** %3, align 8
  br label %18

13:                                               ; preds = %2
  %14 = load i32, i32* %5, align 4
  %15 = icmp ne i32 %14, 0
  %16 = zext i1 %15 to i64
  %17 = select i1 %15, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i8* null
  store i8* %17, i8** %3, align 8
  br label %18

18:                                               ; preds = %13, %12, %11
  %19 = load i8*, i8** %3, align 8
  ret i8* %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
